Inputs are no longer jumping around.

--- a/src/components/mx-input/mx-input.scss
+++ b/src/components/mx-input/mx-input.scss
@@ -10,10 +10,6 @@ mx-input {
     align-items: center;
     align-content: center;
 
-    &.focused {
-      border: 2px solid #0457af;
-    }
-
     i {
       font-size: 24px;
     }
@@ -23,14 +19,15 @@ mx-input {
       left: 10px;
       display: block;
       cursor: text;
-      -webkit-transition: color 0.2s ease-out, -webkit-transform 0.2s ease-out;
-      transition: color 0.2s ease-out, -webkit-transform 0.2s ease-out;
-      transition: transform 0.2s ease-out, color 0.2s ease-out;
-      transition: transform 0.2s ease-out, color 0.2s ease-out, -webkit-transform 0.2s ease-out;
+      -webkit-transition: color 0.1s ease-out, -webkit-transform 0.1s ease-out;
+      transition: color 0.1s ease-out, -webkit-transform 0.1s ease-out;
+      transition: transform 0.1s ease-out, color 0.1s ease-out;
+      transition: transform 0.1s ease-out, color 0.1s ease-out, -webkit-transform 0.1s ease-out;
       -webkit-transform-origin: 0% 100%;
       transform-origin: 0% 100%;
       text-align: initial;
       padding: 0 5px;
+      margin-top: 0px;
       font-size: 16px;
       z-index: 10;
 
@@ -46,6 +43,14 @@ mx-input {
       }
     }
 
+    &.focused {
+      border: 2px solid #0457af;
+
+      .mx-input-inner-wrapper {
+        padding: 0 15px;
+      }
+    }
+
     &.standard {
       min-height: 48px;
       max-height: 48px;
@@ -56,6 +61,15 @@ mx-input {
         &.active {
           -webkit-transform: translateY(-22px) scale(0.8);
           transform: translateY(-22px) scale(0.8);
+        }
+      }
+
+      &.focused {
+        label {
+          &.active {
+            padding: 0 4px;
+            top: 10px !important;
+          }
         }
       }
     }
@@ -70,6 +84,15 @@ mx-input {
         &.active {
           -webkit-transform: translateY(-17px) scale(0.8);
           transform: translateY(-17px) scale(0.8);
+        }
+      }
+
+      &.focused {
+        label {
+          &.active {
+            padding: 0 4px;
+            top: 4px !important;
+          }
         }
       }
     }
@@ -87,6 +110,7 @@ mx-input {
 
     .mds-input-left-content {
       display: flex;
+      width: 24px;
       flex-shrink: 0;
       margin-right: 16px;
     }
